--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <!-- <div id="0" style=""></div> -->
     <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)" ><strong></strong></p>
     <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn" onclick="for_()" id="button">点击以开始</button>
-    <p  class="footer center" style="font-size: larger; ">© 2023 <strong >高浩朗</strong> 版权所有，保留所有权利</p>
+    <p  class="footer center" style="font-size: 19px ">© 2023 <strong >高浩朗</strong> | <a href="https://RssICX.github.io/" target="_blank">随机点名 Cloud X</a></p>
 </body>
 </html>
