--- a/index.html
+++ b/index.html
@@ -1,57 +1,70 @@
-<!DOCTYPE html>
-<html lang="zh-cn" manifest="./manifest.appcache">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>随机点名 Cloud X</title>
-    <link rel="stylesheet" href="./CSS/main.d.l.css">
-    <link rel="icon" href="./CSS/small.ico">
-    <script>
-        var random,aup,aup_history= [0,0,0,0,0,0,0],aup2;
-        function randomNum(minNum,maxNum){ 
-            switch(arguments.length){ 
-                case 1: 
-                    return parseInt(Math.random()*minNum+1,10); 
-                break; 
-                case 2: 
-                    return parseInt(Math.random()*(maxNum-minNum+1)+minNum,10); 
-                break; 
-                    default: 
-                        return 0; 
+    <!DOCTYPE html>
+    <html lang="zh-cn" manifest="./manifest.appcache">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <title>随机点名 Cloud X</title>
+        <link rel="stylesheet" href="./CSS/main.d.l.css">
+        <link rel="icon" href="./CSS/small.ico">
+        <script>
+            var random,aup,aup_history= [0,0,0,0,0,0,0],aup2;
+            function randomNum(minNum,maxNum){ 
+                switch(arguments.length){ 
+                    case 1: 
+                        return parseInt(Math.random()*minNum+1,10); 
                     break; 
+                    case 2: 
+                        return parseInt(Math.random()*(maxNum-minNum+1)+minNum,10); 
+                    break; 
+                        default: 
+                            return 0; 
+                        break; 
+                }
             }
-        }
-        function for_()
-        {
-            random= randomNum(1,60);
-            aup_history[6]=randomNum(1,60);
-            aup_history[4]=randomNum(1,60);
-            aup_history[3]=randomNum(1,60);
-            aup_history[2]=randomNum(1,60);
-            aup_history[1]=randomNum(1,60);
-            aup_history[5]=randomNum(1,60);
-            aup_history[0]=random;
-            aup="请学号为"+' '+aup_history[randomNum(0,6)]+'\u0020'+"号的同学起立";
-            document.getElementById("0").innerHTML = aup;
-            // document.getElementById("0").innerText = "aup=请学号为+'\u0020'+random+'\u0020'+号的同学起立;  \n document.getElementById(0).innerHTML = aup;";
-        }
-        function init(){
-        setInterval(function(){
-        applicationCache.update();
-        },5000);
-        applicationCache.addEventListener("updateready",function(){
-        applicationCache.swapCache();
-        localtion.reload();   
-        },true);
-    }
-    </script>
-</head>
-<body onload="init();">
-    <h1><p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 Cloud X</p></h1>
-    <!-- <div id="0" style=""></div> -->
-    <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)" ><strong></strong></p>
-    <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn" onclick="for_()" id="button">点击以开始</button>
-    <p  class="footer center" style="font-size: 19px ">© 2023 <strong >高浩朗</strong> | <a href="https://RssICX.github.io/" target="_blank">随机点名 Cloud X</a></p>
-</body>
-</html>
+            function for_()
+            {
+                // random= randomNum(1,60);
+                // aup_history[6]=randomNum(1,60);
+                // aup_history[4]=randomNum(1,60);
+                // aup_history[3]=randomNum(1,60);
+                // aup_history[2]=randomNum(1,60);
+                // aup_history[1]=randomNum(1,60);
+                // aup_history[5]=randomNum(1,60);
+                // aup_history[0]=random;
+                
+                // document.getElementById("0").innerHTML = aup;
+                // // document.getElementById("0").innerText = "aup=请学号为+'\u0020'+random+'\u0020'+号的同学起立;  \n document.getElementById(0).innerHTML = aup;";
+                for (let index = 0; index <= 10000; index++) {
+                    aup_history[index]=randomNum(1,60);
+                }
+                aup="请学号为"+' '+aup_history[randomNum(0,10000)]+'\u0020'+"号的同学起立";
+                document.getElementById("0").innerHTML=aup;
+            }
+        </script>
+    </head>
+    <body>
+        <script>
+            var ie;
+            //ie?
+            if (!!window.ActiveXObject || "ActiveXObject" in window)
+            {
+                ie=true;
+            }
+            else
+            {
+                ie=false;
+            }
+            if (ie==true)
+            {
+                window.location.href="./ie.html";
+                document.getElementById("0").innerHTML="随机点名 Cloud X已不兼容IE";
+            }
+        </script>
+        <h1><p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 Cloud X</p></h1>
+        <!-- <div id="0" style=""></div> -->
+        <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)" ><strong></strong></p>
+        <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn" onclick="for_()" id="button">点击以开始</button>
+        <p  class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">© 2023 <strong >高浩朗</strong> | <a href="https://RssICX.github.io/" target="_blank">随机点名 Cloud X</a></p>
+    </body>
+    </html>
