--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             if (ie==true)
             {
                 window.location.href="./ie.html";
-                document.getElementById("0").innerHTML="随机点名 Cloud X已不兼容IE";
+                // document.getElementById("0").innerHTML="随机点名 Cloud X已不兼容IE";
             }
         </script>
+        <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 Cloud X不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header>
         <h1><p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 Cloud X</p></h1>
         <!-- <div id="0" style=""></div> -->
         <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)" ><strong></strong></p>
