--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./CSS/main.d.l.css">
         <link rel="icon" href="./CSS/small.ico">
         <script>
-            var random,aup,aup_history= [0,0,0,0,0,0,0],aup2;
+            var random,aup,aup_history= [0,0,0,0,0,0,0],aup2,aup_math=60,aup_h=[0,0,0,0];
             function randomNum(minNum,maxNum){ 
                 switch(arguments.length){ 
                     case 1: 
@@ -22,26 +22,38 @@
                         break; 
                 }
             }
+            var i=0,u=0,tyu=0;
+            function cout() {   
+                    for (let index = 0; index <= 10000; index++) 
+                    {
+                        aup_history[index]=randomNum(1,aup_math);
+                    }
+                    u=aup_history[randomNum(0,10000)];
+                    aup="请学号为"+' '+u+'\u0020'+"号的同学起立";
+                    // aup="请学号为"+' '+"34"+'\u0020'+"号的同学起立";
+                    document.getElementById("0").innerHTML=aup;   
+            }
             function for_()
             {
-                // random= randomNum(1,60);
-                // aup_history[6]=randomNum(1,60);
-                // aup_history[4]=randomNum(1,60);
-                // aup_history[3]=randomNum(1,60);
-                // aup_history[2]=randomNum(1,60);
-                // aup_history[1]=randomNum(1,60);
-                // aup_history[5]=randomNum(1,60);
-                // aup_history[0]=random;
-                
-                // document.getElementById("0").innerHTML = aup;
-                // // document.getElementById("0").innerText = "aup=请学号为+'\u0020'+random+'\u0020'+号的同学起立;  \n document.getElementById(0).innerHTML = aup;";
-                for (let index = 0; index <= 10000; index++) {
-                    aup_history[index]=randomNum(1,60);
-                }
-                aup="请学号为"+' '+aup_history[randomNum(0,10000)]+'\u0020'+"号的同学起立";
-                document.getElementById("0").innerHTML=aup;
+                var x = document.cookie;
+            document.getElementById("pup").innerHTML=x;
+                cout();
+            }
+            var Math0;
+            function cin() {
+                Math0 = prompt("请输入您想要随机点名的人数");
+                aup_math = Math0;
+                document.cookie="aup_math="+Math0;
+                aup_m();
+                alert("点名人数已重置 .awa.");
+                _0er();
+            }
+            function aup_m(){
+                return aup_math;
             }
         </script>
+
+        <!-- </style> -->
     </head>
     <body>
         <script>
@@ -61,11 +73,19 @@
                 // document.getElementById("0").innerHTML="随机点名 Cloud X已不兼容IE";
             }
         </script>
-        <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 Cloud X不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header>
+        <!-- <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 Cloud X不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header> -->
         <h1><p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 Cloud X</p></h1>
         <!-- <div id="0" style=""></div> -->
         <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)" ><strong></strong></p>
         <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn" onclick="for_()" id="button">点击以开始</button>
+        <div style="height: 1ch;"></div>
+        <small><a id="str" onclick="cin();" style="height: 10px; color: #4a8fe3; background-color: inherit;" class="c-aaa" ></a></small>
         <p  class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">© 2023 <strong >高浩朗</strong> | <a href="https://RssICX.github.io/" target="_blank">随机点名 Cloud X</a></p>
     </body>
-    </html>
+    <script>
+        _0er();
+        function _0er() {
+            window.onload = document.getElementById("str").innerHTML="需要点名的人数不是"+aup_m()+"？点我输入";   
+        }
+    </script>
+</html>
