--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             }
         }
         var i = 0, u = 0, tyu = 0;
+        var id_0 = document.getElementById("0");
         function cout() {
             for (let index = 0; index <= 10000; index++) {
                 aup_history[index] = randomNum(1, aup_math);
@@ -34,11 +35,19 @@
             u = aup_history[randomNum(0, 10000)];
             aup = "请学号为" + ' ' + u + '\u0020' + "号的同学起立";
             // aup="请学号为"+' '+"34"+'\u0020'+"号的同学起立";
-            document.getElementById("0").innerHTML = aup;
+            var _0___o_ = document.getElementById("0");
+            _0___o_.innerHTML = aup;
+
         }
+        function myse() {
+            document.getElementById("0").style.display = "block";
+        }
+        // sleep(fun, 2000);
         function for_() {
-            // d   ocument.getElementById("pup").innerHTML=x;
             cout();
+            document.getElementById("0").style.display = "none";
+            document.getElementById("0").setAttribute("class", "center u");
+            myse();
         }
         var cou = 0, Math0;
         function name(count) {
@@ -118,7 +127,7 @@
         <p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 Cloud X</p>
     </h1>
     <!-- <div id="0" style=""></div> -->
-    <p id="0" class="pc" style="font-size: 3rem; height: calc(20vh)">
+    <p id="0" class="pc u" style="font-size: 3rem; height: calc(20vh)">
         <strong>
 
         </strong>
@@ -135,24 +144,27 @@
     </small>
     <p class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">
         © 2023
-        <strong>
+        <strong class="a">
             高浩朗
         </strong>
         |
-        <a href="https://RssICX.github.io/">
+        <a class="a" href="https://RssICX.github.io/">
             随机点名 Cloud X
         </a>
         |
-        <a href="javascript:void(0)" onclick="displayWindow()">关于</a>
+        <a class="a" href="javascript:void(0)" onclick="displayWindow()">关于</a>
     </p>
     <!--悬浮窗口-->
     <div id="window" class="window_css dong">
         <div class="her" style="width: 1%;"></div>
         <div class="colll" style="text-align: right;" title="关闭" onclick="hideWindow()"></div>
-        <div class="center" style="transform: translateY(60%); font-size: 28px; color: #333;">关于 随机点名 Cloud X</div>
-        <div class="center" style="transform: translateX(0%) translateY(70%); font-size: 22px;">
+        <div class="center" style="transform: translateY(60%); font-size: 28px; color: #333;">
+            <strong>关于 随机点名 Cloud X</strong>
+        </div>
+        <div style="height: 23%;"></div>
+        <div class="center" style="font-size: 22px;">
             <div>这是一个可以“增进”师生关系的程序！</div>
-            <div>还有，作者是男生哦~<br><del><small>（虽然有点可爱）</small></del></div>
+            <div>还有，作者是男生哦~<br><del><small style="font-size: 10%;">（虽然看起来有点可爱）</small></del></div>
             <div>还有最重要的<br>未经作者允许，不可以二次制作哦~ <br>
                 <del><small>开源是不可能开源的，这辈子都不可能开源的</small></del>
             </div>
