--- a/ie.html
+++ b/ie.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="spm_prefix" content="888.71946">
-    <title>随机点名 Cloud X</title>
+    <title>随机点名 iAir</title>
     <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1454899_pqhvobved2o.css">
     <style>
       * { padding: 0; margin: 0; box-sizing: border-box; font-family: Helvetica Neue, Microsoft YaHei,
@@ -260,7 +260,7 @@
         <img class="pic-box-logo" src="./CSS/small.ico">
         <h1 class="center-title">您的浏览器版本过低</h1>
         <!-- <p>亲爱的小伙伴，由于微软官方近期停止支持IE 11内核的浏览器，您当前使用的浏览器已无法正常访问。</p> -->
-        <p>自2023/7/14 22:05起，随机点名 Cloud X不再兼容IE，您可以 <span class="highline">升级浏览器</span> 以继续访问，感谢您的支持，为您带来的不便请谅解</p>
+        <p>自2023/7/14 22:05起，随机点名 iAir不再兼容IE，您可以 <span class="highline">升级浏览器</span> 以继续访问，感谢您的支持，为您带来的不便请谅解</p>
       </div>
       <div class="text-box">
         <div class="title">
@@ -301,7 +301,7 @@
         </div>
       </div>
       <div class="copyright">
-       <p>© 2023 <strong >高浩朗</strong> | <a style="color: inherit;" href="https://RssICX.github.io/" target="_blank">随机点名 Cloud X</a></p>
+       <p>© 2023 <strong >高浩朗</strong> | <a style="color: inherit;" href="https://RssICX.github.io/" target="_blank">随机点名 iAir</a></p>
       </div>
     </div>
 
