--- a/index-time.html
+++ b/index-time.html
@@ -80,13 +80,13 @@
 
 <body style="position: relative;">
     <div style="height: calc(38.5vh);"></div>
-    <div id="day">距离中考还有 <strong id="strong0" style="color: rgb(222, 0, 0);"></strong> 天</div>
+    <div id="day">距离中考还有 <div id="strong0" style="color: rgb(222, 0, 0);"></div> 天</div>
     <div id="box"></div>
     <!-- <div class="parent" style="color: aliceblue;">陈卓伦是猫娘还是药娘？</div>
     <button>猫娘</button>
     <button>药娘</button> -->
     <div class="parent" style="color: aliceblue;">今天也要好好学习啊!</div>
-    <div class="parent footer" style="color: rgb(63, 63, 63);">&copy 2023 高浩朗</div>
+    <div class="parent footer" style="color: rgb(116, 105, 105);">&copy 2023 高浩朗</div>
     <script>
         var i = 0;
         function myDate() {
