--- a/index-time.html
+++ b/index-time.html
@@ -75,6 +75,8 @@
     </style>
 </head>
 <script>
+    // <!-- `console.log("陈州伦是猫女还亯药女?\n1.catgirl\t2.药daughter");`
+    // 行正在向控制台打印一条消息。该消息询问“陈歈子伦”是否是“药女”或“药女”，并提供选项 1 和 2 供用户选择。 `\n` 是换行符，`\t` 是制表符，用于格式化消息。 -->
     console.log("陈卓伦是猫娘还是药娘？\n1.猫娘\t2.药娘");
 </script>
 
@@ -89,6 +91,8 @@
     <div class="parent footer" style="color: rgb(116, 105, 105);">&copy 2023 高浩朗</div>
     <script>
         var i = 0;
+        // <!-- `myDate()` 函数用于在网页上显示当前时间。它创建一个新的“Date”对象来获取当前日期和时间。然后，它从“Date”对象中提取小时和分钟，并设置 id
+        // 为“box”的元素的innerHTML，以“小时：分钟”的格式显示时间。 -->
         function myDate() {
             var now = new Date();
             var year = now.getFullYear();
@@ -116,6 +120,7 @@
             var html = " " + d + " ";
             return html;
         }
+        // <!-- “daay()”函数用于计算指定日期和时间之前剩余的天数。 -->
         function daay() {
             var doc;
             doc = document.getElementById("strong0");
