--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- The above code is an HTML document that creates a web page for a random name generator. It includes
+JavaScript functions to generate random numbers, display random names, and handle user input for the
+number of names to generate. The page also includes a floating window for additional information and
+a footer with links. -->
 <!DOCTYPE html>
 <html lang="zh-cn" manifest="./manifest.appcache">
 
@@ -13,6 +17,8 @@
         var cookie1 = document.cookie;
         var num2 = cookie1.replace(/[^\d]/g, " ");
         var random, aup, aup_history = [0, 0, 0, 0, 0, 0, 0], aup2, aup_math = num2, aup_h = [0, 0, 0, 0];
+        // <!-- The `randomNum` function is a JavaScript function that generates a random number between a
+        // minimum and maximum value. -->
         function randomNum(minNum, maxNum) {
             switch (arguments.length) {
                 case 1:
@@ -37,7 +43,6 @@
             // aup="请学号为"+' '+"34"+'\u0020'+"号的同学起立";
             var _0___o_ = document.getElementById("0");
             _0___o_.innerHTML = aup;
-
         }
         function myse() {
             document.getElementById("0").style.display = "block";
@@ -91,9 +96,10 @@
                 return false;
             }
         }
-        function hideiput0(){
+        function hideiput0() {
 
         }
+        // <!-- The `cin()` function is used to handle user input for the number of names to generate. -->
         function cin() {
             var bian, n = 0;
             bian = document.getElementById("input").value;
@@ -105,6 +111,8 @@
             }
             else {
                 document.getElementById("ti").innerText = "";
+                _o_(bian);
+                hideiput();
             }
         }
         function _o_(Math01) {
@@ -117,6 +125,7 @@
             return aup_math;
         }
         /*当点击调用此方法后,将悬浮窗口显示出来,背景变暗*/
+        // <!-- 该代码定义了四个 JavaScript 函数： -->
         function displayWindow() {
             /*悬浮窗口的显示,需要将display变成block*/
             document.getElementById("window").style.display = "block";
@@ -155,6 +164,7 @@
         }
     </script>
     <!-- <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 iAir不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header> -->
+    <!-- 上面的代码是生成随机名称的网页的 HTML 代码。它包括标题、段落元素、按钮以及一些用于输入和窗口显示的附加元素。该代码还包括用于格式化和定位页面上的元素的 CSS 样式。 -->
     <h1>
         <p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem;">随机点名 iAir</p>
     </h1>
@@ -221,7 +231,7 @@
     <script>
         _0er();
         function _0er() {
-            if (document.cookie == "") {
+            if (aup_math == "") {
                 document.getElementById("0").innerHTML = (" " + " 你还没有设置随机点名人数哦~程序也不知道要怎么输出了呐~");
                 document.getElementById("str").innerHTML = ("设置点名人数");
             }
