--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@ a footer with links. -->
             <button class="btn btn1" onclick="cin();">确定</button>
         </div>
         <p id="ti" style="display: flex;justify-content: center; transform: translateX(0%) translateY(322%);"></p>
+        <P id="it" ></P>
     </div>
+    <!-- <div class="set">设置
+        <div></div>
+    </div> -->
     <div id="shadow_down" class="shadow_css_ dong1_"></div>
     <p class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">
         © 2023
@@ -80,46 +84,6 @@ a footer with links. -->
         <a href="./index-time.html" id="timeday" style="color: #999;text-decoration: none;display: flex;"></a>
         <a href="./index-time.html" id="time" style="color: #999;text-decoration: none;display: flex;"></a>
     </div>
-    <script>
-        var i = 0;
-        // <!-- `myDate()` 函数用于在网页上显示当前时间。它创建一个新的“Date”对象来获取当前日期和时间。然后，它从“Date”对象中提取小时和分钟，并设置 id
-        // 为“box”的元素的innerHTML，以“小时：分钟”的格式显示时间。 -->
-        function myDate() {
-            var now = new Date();
-            var year = now.getFullYear();
-            var month = now.getMonth() + 1;
-            var day = now.getDate();
-            var hours = now.getHours();
-            var minutes = now.getMinutes();
-            var seconds = now.getSeconds();
-            document.getElementById("time").innerHTML = hours + ":" + minutes;
-            // document.getElementById("box").innerHTML = hours + ":" + minutes + ":" + seconds;
-        }
-        myDate();
-        setInterval(myDate, 1000);
-        function getDistanceSpecifiedTime(dateTime) {
-            // 指定日期和时间
-            var EndTime = new Date(dateTime);
-            // 当前系统时间
-            var NowTime = new Date();
-            var t = EndTime.getTime() - NowTime.getTime();
-            var d = Math.floor(t / 1000 / 60 / 60 / 24);
-            var h = Math.floor(t / 1000 / 60 / 60 % 24);
-            var m = Math.floor(t / 1000 / 60 % 60);
-            var s = Math.floor(t / 1000 % 60);
-            // var html = d + " 天" + h + " 时" + m + " 分" + s + " 秒";
-            var html = " " + d + " ";
-            return html;
-        }
-        // <!-- “daay()”函数用于计算指定日期和时间之前剩余的天数。 -->
-        function daay() {
-            var doc;
-            doc = document.getElementById("timeday");
-            doc.innerHTML = "距离中考还有" + getDistanceSpecifiedTime(new Date("2025/6/28 00:00:00")) + "天";
-        }
-        daay();
-        setInterval(daay, 3600000);
-    </script>
     <!--悬浮窗口-->
     <div id="window" class="window_css dong">
         <div class="her" style="width: 1%;"></div>
@@ -130,7 +94,7 @@ a footer with links. -->
         <div style="height: 23%;"></div>
         <div class="center" style="font-size: 22px;">
             <div>这是一个可以“增进”师生关系的程序！</div>
-            <div>还有，作者是男生哦~<br><del><small style="font-size: 10%;">（虽然看起来有点可爱）</small></del></div>
+            <!-- <div>还有，作者是男生哦~<br><del><small style="font-size: 10%;">（虽然看起来有点可爱）</small></del></div> -->
             <div>还有最重要的<br>未经作者允许，不可以二次制作哦~ <br>
                 <del><small>开源是不可能开源的，这辈子都不可能开源的</small></del>
             </div>
