--- a/rsci/index.html
+++ b/rsci/index.html
@@ -9,7 +9,7 @@ a footer with links. -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>随机点名 iAir - 为 冯思尧 定制</title>
+    <title>随机点名 iAir</title>
     <link rel="stylesheet" href="./styles/main.d.l.css">
     <link rel="stylesheet" href="./styles/media.css">
     <link rel="icon" href="./images/maca.png">
