--- a/rsci/index.html
+++ b/rsci/index.html
@@ -15,8 +15,8 @@ a footer with links. -->
     <link rel="icon" href="./images/maca.png">
     <link rel="stylesheet" href="./styles/window.css">
     <script src="./JS/main.js"></script>
-
 <body>
+    
     <script>
         var ie;
         //ie?
@@ -33,18 +33,18 @@ a footer with links. -->
     </script>
     <!-- <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 iAir不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header> -->
     <!-- 上面的代码是生成随机名称的网页的 HTML 代码。它包括标题、段落元素、按钮以及一些用于输入和窗口显示的附加元素。该代码还包括用于格式化和定位页面上的元素的 CSS 样式。 -->
+    <div style="height: calc(20th);"></div>
     <h1>
-        <p id="pup" class="center big"
-            style="height: calc(21vh); font-size: 4rem; box-shadow: 0 0 0 0 rgba(0, 0, 0, .3);">随机点名 iAir</p>
+        <p id="pup" class="center big" style="height: calc(21vh); font-size: 4rem; box-shadow: 0 0 0 0 rgb(255, 255, 255); color: white;">随机点名 iAir</p>
     </h1>
     <!-- <div id="0" style=""></div> -->
-    <p id="0" class="pc u" style="font-size: 3rem; height: calc(20vh)">
+    <p id="0" class="pc u" style="font-size: 3rem; height: calc(20vh);color: azure;">
         <strong>
 
         </strong>
     </p>
     <!-- <div class="incorrect" style="size: 10ch;"></div> -->
-    <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn d"
+    <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger; z-index: 9999;" class="btn1 btn d"
         onclick="for_()" id="button">
         点击以开始
     </button>
@@ -72,7 +72,7 @@ a footer with links. -->
         <div></div>
     </div> -->
     <div id="shadow_down" class="shadow_css_ dong1_"></div>
-    <p class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">
+    <p class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #171717;">
         © 2023
         <strong class="a">
             高浩朗 & 冯思尧
@@ -120,5 +120,7 @@ a footer with links. -->
         // }
     </script>
 </body>
-
+<!-- <div class="video-box">
+    <video class="video-background" preload="auto" loop playsinline autoplay src="./images/3_15488489005867.mp4" tabindex="-1" muted="muted"></video>
+ </div> -->
 </html>
