--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a footer with links. -->
     </p>
     <!-- <div class="incorrect" style="size: 10ch;"></div> -->
     <button style="display:block;margin:0 auto; width:150px; height:45px; font-size: larger;" class="btn1 btn d"
-        onclick="for_()" id="button">
+        onclick="onc()" id="button">
         点击以开始
     </button>
     <div style="height: 1ch;"></div>
@@ -72,6 +72,7 @@ a footer with links. -->
             <input id="input" placeholder="输入框在这里哦૮꒰ ˶• ༝ •˶꒱ა" type="number">
             <button class="btn btn1" onclick="cin();">确定</button>
         </div>
+        
         <p id="ti" style="display: flex;justify-content: center; transform: translateX(0%) translateY(322%);"></p>
         <P id="it" ></P>
     </div>
@@ -80,7 +81,7 @@ a footer with links. -->
     </div> -->
     <div id="shadow_down" class="shadow_css_ dong1_"></div>
     <p class="footer center" style="font-size: 19px; margin-top: 60px; text-align: center; color: #999;">
-        © 2023
+        © 2023~2024
         <strong class="a">
             高浩朗
         </strong>
@@ -103,7 +104,7 @@ a footer with links. -->
             <div>这是一个可以“增进”师生关系的程序！</div>
             <!-- <div>还有，作者是男生哦~<br><del><small style="font-size: 10%;">（虽然看起来有点可爱）</small></del></div> -->
             <div>还有最重要的<br>未经作者允许，不可以二次制作哦~ <br>
-                <div>本项目使用<a class="a12" href="https://github.com/matthewhudson/current-device">current-device</a>库，并依据GUN协议开源</div>
+                <div>本项目使用<a class="a12" href="https://github.com/matthewhudson/current-device">current-device</a>库</div>
             </div>
         </div>
     </about>
