--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@ a footer with links. -->
             window.location.href = "./ie.html";
             // document.getElementById("0").innerHTML="随机点名 iAir已不兼容IE";
         }
-        var audio= new Audio('./music/back.mp3');
-        var size=audio.duration;
-        function play_minuca(){
-            audio.play;//播放
+        var audio = new Audio('./music/back.mp3');
+        var size = 0;
+        
+        audio.onloadedmetadata = function() {
+          size = audio.duration;
+          play_minuca(); // 第一次播放
+          window.setInterval(play_minuca, size * 1000 + 1000); // 设置定时器
+        };
+        
+        function play_minuca() {
+          audio.play(); // 播放
         }
-        play_minuca();
-        window.setInterval(play_minuca,size*1000+1000);
     </script>
     <!-- <header style="top : 0;text-align: center;">自2023/7/14 22:05起，随机点名 iAir不再兼容IE，您可以 升级浏览器 以继续访问，感谢您的支持，为您带来的不便请谅解</header> -->
     <!-- 上面的代码是生成随机名称的网页的 HTML 代码。它包括标题、段落元素、按钮以及一些用于输入和窗口显示的附加元素。该代码还包括用于格式化和定位页面上的元素的 CSS 样式。 -->
